--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hammerjs": "2.0.8",
     "jquery": "3.2.1",
     "less": "2.7.3",
+    "mydatepicker": "^2.6.3",
     "ng2-scroll-to-el": "1.1.0",
     "ng2-select": "1.2.0",
     "ng2-toastr": "^4.1.2",
