--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ng2-select": "1.2.0",
     "ng2-toastr": "^4.1.2",
     "ngx-chips": "^1.6.3-rc.3",
+    "ngx-clipboard": "^11.1.3",
     "ngx-color-picker": "^5.3.3",
     "ngx-gallery": "4.1.1",
     "rxjs": "5.5.6",
