--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jquery": "3.2.1",
     "less": "2.7.3",
     "mydatepicker": "^2.6.3",
+    "ng2-charts": "^1.6.0",
     "ng2-material-dropdown": "^0.9.5",
     "ng2-scroll-to-el": "1.1.0",
     "ng2-select": "1.2.0",
