--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^5.2.5",
     "@angular/router": "^5.2.5",
     "@ngx-translate/core": "9.1.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "angular-font-awesome": "^3.1.2",
     "angular2-cookie": "^1.2.6",
     "bootstrap": "4.0.0-alpha.6",
