--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "4.0.0-alpha.6",
     "bootstrap-tokenfield": "^0.12.0",
     "core-js": "2.4.1",
+    "date-fns": "^1.30.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "2.0.8",
     "jquery": "3.2.1",
